--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,17 @@
 {{! this file we will add html formatting for the homepage }}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bookshelf</title>
+    </head>
+    <body>
+        <header>
+            <h1>Bookshelf Test</h1>
+        </header>
+        <main>
+            {{{body}}}
+        </main>
+    </body>
+</html>
