added a few more fields to Book model to accomodate the abundance of data we're getting. Created a few easily importable/exportable functions that we can use throughout the fronted to make our lives easier. Debating using a language detection library (new technology??) to only get first_sentences in ENGLISH

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,5 @@
-{{! this file we will add html formatting for the homepage }}
+{{!-- ! This file is where all other views get pulled into,
+! We need to make our awesome header, navbar, and footer HERE --}}
 <!DOCTYPE html>
 <html lang="en">
     <head>
