--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -1,1 +1,17 @@
 {{! similar to book-details file, but more general info }}
+<!-- If the user is logged in, render the book content -->
+{{#if loggedIn}}
+<div class="book-card">
+    <img src="{{ coverUrl }}" alt="Book Cover" class="book-cover">
+    <div class="book-info">
+        <h2>{{ title }}</h2>
+        <p>Readers Rated this book: {{ ratings_average }} out of 5 </p>
+        <p>Author: {{ author_name }}</p>
+        <p>First Published Year: {{ first_publish_year }}</p>
+        <p>Book Intro: {{ first_sentence }}</p>
+    </div>
+</div>
+<!-- Otherwise, provide a link to login -->
+{{else}}
+<a href="/">You must login to build your bookshelf</a>
+{{/if}}
