forgot to add Book model before properties, duh

--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -2,13 +2,13 @@
 <!-- If the user is logged in, render the book content -->
 {{#if loggedIn}}
 <div class="book-card">
-    <img src="{{ coverUrl }}" alt="Book Cover" class="book-cover">
+    <img src=`https://covers.openlibrary.org/b/olid/{{Book.key}}-M.jpg` alt="Book Cover" class="book-cover">
     <div class="book-info">
-        <h2>{{ title }}</h2>
-        <p>Readers Rated this book: {{ ratings_average }} out of 5 </p>
-        <p>Author: {{ author_name }}</p>
-        <p>First Published Year: {{ first_publish_year }}</p>
-        <p>Book Intro: {{ first_sentence }}</p>
+        <h2>{{Book.title}}</h2>
+        <p>Readers Rated this book: {{Book.ratings_average}} out of 5 </p>
+        <p>Author: {{Book.author_name}}</p>
+        <p>First Published Year: {{Book.first_publish_year}}</p>
+        <p>Book Intro: {{Book.first_sentence}}</p>
     </div>
 </div>
 <!-- Otherwise, provide a link to login -->
