fixed the image url structure

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -33,7 +33,7 @@
             <div class="gallery-container">
                 {{#each galleryItems}}
                 <div class="gallery-item">
-                    <img src="{{imageUrl}}" alt="{{title}}">
+                    <img src= `https://covers.openlibrary.org/b/olid/{{cover_edition_key}}-M.jpg` alt="{{title}}">
                     <p>{{title}} ({{first_publish_year}})</p>
                     <p>Author: {{author_name}}</p>
                     <p>Rating: {{ratings_average}}</p>
