--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -11,7 +11,9 @@
         <p>Book Intro: {{Book.first_sentence}}</p>
     </div>
     <div>
-        <button class="add-book-btn">Add to Bookshelf</button>
+        <button class="add-book-btn"
+            onclick="addToBookshelf('{{Book.title}}', '{{Book.author_name}}', '{{Book.cover_edition_key}}')">Add to
+            Bookshelf</button>
     </div>
 </div>
 <!-- Otherwise, provide a link to login -->
