fleshed out homeRoutes.js, had to dip into the front-end in order to test my changes though. On the plus side, logging in and logging out are taken care of. Registering a user is taken care of. The homepage is successfully seeding from the api on page load. When the user goes to /bookshelf it'll log EVERYTHING related to the logged in user in the terminal console for now. But that shows we can render anything related to that user on their bookshelf page.

--- a/views/bookshelf.handlebars
+++ b/views/bookshelf.handlebars
@@ -1,10 +1,12 @@
 {{! This page and its functionality is for logged in users only}}
 
-{{#if loggedIn}}
-<h1>{{Username}}'s Bookshelf</h1>
-<div class="bookshelf-container">
+{{#if logged_in}}
+  <h1>{{user.username}}'s Bookshelf</h1>
+  <div class="bookshelf-container">
+
+    {{log user}}
     <!-- saved books would line up here as divs of cover photo img src items -->
-</div>
+  </div>
 {{else}}
-<p>You must login to view your bookshelf. <a href="/">Login</a></p>
+  <p>You must login to view your bookshelf. <a href="/">Login</a></p>
 {{/if}}
