--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,18 +1,65 @@
-{{!-- ! This file is where all other views get pulled into,
-! We need to make our awesome header, navbar, and footer HERE --}}
-<!DOCTYPE html>
+{{! ! This file is where all other views get pulled into,
+! We need to make our awesome header, navbar, and footer HERE }}
+
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bookshelf</title>
-    </head>
-    <body>
-        <header>
-            <h1>Bookshelf Test</h1>
-        </header>
-        <main>
-            {{{body}}}
-        </main>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Document</title>
+  </head>
+
+  <body>
+    <header>
+      <h1 class="main-title"><a href="/">Bookshelf</a></h1>
+      <nav>
+        <ul>
+          {{! TODO: Will change the name of hrefs once homeRoutes defined }}
+          <li><a href="/bookshelf">My Bookshelf</a></li>
+          <li><a href="/findbooks">Find Books</a></li>
+          <li>
+            {{#if logged_in}}
+              <a id="logoutButton" href="/login">Logout</a>
+            {{else}}
+              <a id="loginButton" href="/login">Login</a>
+            {{/if}}
+          </li>
+        </ul>
+      </nav>
+
+      {{#if logged_in}}
+        <h3>Logged In!!!</h3>
+      {{/if}}
+    </header>
+
+    <main>
+      {{{body}}}
+    </main>
+
+    <!-- If they're logged in, show nothing. Otherwise show the login-form -->
+    {{#if logged_in}}
+      <br />
+    {{else}}
+      <form class="login-form">
+        <label for="username">Username:</label>
+        <input type="text" id="usernameInput" name="username" required />
+
+        <label for="password">Password:</label>
+        <input type="password" id="passwordInput" name="password" required />
+
+        <br />
+
+        <button type="submit">Login</button>
+      </form>
+    {{/if}}
+
+    {{! TODO: DON'T FORGET THE FOOTER RIGHT HERE }}
+
+    {{#if logged_in}}
+      <script src="/js/logoutHandle.js"></script>
+    {{else}}
+      <script src="/js/loginHandle.js"></script>
+    {{/if}}
+
+  </body>
 </html>
