--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css" />
+
     <title>Document</title>
   </head>
 
@@ -54,12 +56,17 @@
     {{/if}}
 
     {{! TODO: DON'T FORGET THE FOOTER RIGHT HERE }}
+    <footer>
+      <p>footer</p>
+    </footer>
 
     {{#if logged_in}}
       <script src="/js/logoutHandle.js"></script>
     {{else}}
       <script src="/js/loginHandle.js"></script>
     {{/if}}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   </body>
+  
 </html>
