--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -1,8 +1,9 @@
 {{! similar to book-details file, but more general info }}
 <!-- If the user is logged in, render the book content -->
-{{#if loggedIn}}
+
 <div class="book-card">
-    <img src=`https://covers.openlibrary.org/b/olid/{{Book.cover_edition_key}}-M.jpg` alt="Book Cover for {{Book.title}}" class="book-cover">
+    <img src=`https://covers.openlibrary.org/b/olid/{{Book.cover_edition_key}}-M.jpg`
+        alt="Book Cover for {{Book.title}}" class="book-cover">
     <div class="book-info">
         <h2>{{Book.title}}</h2>
         <p>Readers Rated this book: {{Book.ratings_average}} out of 5 </p>
@@ -10,6 +11,7 @@
         <p>First Published Year: {{Book.first_publish_year}}</p>
         <p>Book Intro: {{Book.first_sentence}}</p>
     </div>
+{{#if loggedIn}}
     <div>
         <button class="add-book-btn"
             onclick="addToBookshelf('{{Book.title}}', '{{Book.author_name}}', '{{Book.cover_edition_key}}')">Add to
