--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -2,7 +2,7 @@
 <!-- If the user is logged in, render the book content -->
 
 <div class="book-card">
-    <img src=`https://covers.openlibrary.org/b/olid/{{Book.cover_edition_key}}-M.jpg`
+    <img src="https://covers.openlibrary.org/b/olid/{{Book.cover_edition_key}}-M.jpg"
         alt="Book Cover for {{Book.title}}" class="book-cover">
     <div class="book-info">
         <h2>{{Book.title}}</h2>
@@ -11,14 +11,17 @@
         <p>First Published Year: {{Book.first_publish_year}}</p>
         <p>Book Intro: {{Book.first_sentence}}</p>
     </div>
-{{#if loggedIn}}
+
+    {{#if loggedIn}}
     <div>
         <button class="add-book-btn"
             onclick="addToBookshelf('{{Book.title}}', '{{Book.author_name}}', '{{Book.cover_edition_key}}')">Add to
             Bookshelf</button>
     </div>
+    {{/if}}
 </div>
+
 <!-- Otherwise, provide a link to login -->
 {{else}}
-<a href="/">You must login to build your bookshelf</a>
+<a href="/">You must log in to build your bookshelf</a>
 {{/if}}
