--- a/views/bookshelf.handlebars
+++ b/views/bookshelf.handlebars
@@ -1,9 +1,9 @@
 {{! This page and its functionality is for logged in users only}}
 
 {{#if loggedIn}}
-<h1>{{Username}}'s Bookshelf</h1>
+<h1>{{user.username}}'s Bookshelf</h1>
 <div class="bookshelf-container">
-    <!-- saved books would line up here as divs of cover photo img src items -->
+  <!-- saved books would line up here as divs of cover photo img src items -->
 </div>
 {{else}}
 <p>You must login to view your bookshelf. <a href="/">Login</a></p>
