made some big functionality changes: user can add books to their 'library', bookshelf page will now display the users shelves and the books they've saved

--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -12,7 +12,7 @@
         <p>Book Intro: {{Book.first_sentence}}</p>
     </div>
 
-    {{#if loggedIn}}
+    {{#if logged_in}}
     <div>
         <button class="add-book-btn"
             onclick="addToBookshelf('{{Book.title}}', '{{Book.author_name}}', '{{Book.cover_edition_key}}')">Add to
