--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -26,4 +26,7 @@
   </main>
 
   <script src="/js/homepageFunctions/seedHomepage.js"></script>
+  {{#if logged_in}}
+    <script src="/js/homepageFunctions/addBook.js"></script>
+  {{/if}}
 </body>
