added changes discussed in scrum

--- a/views/bookshelf.handlebars
+++ b/views/bookshelf.handlebars
@@ -8,10 +8,19 @@
   <h1>{{user.username}}'s Library</h1>
 
   <h2>Your Bookshelves</h2>
+  {{! ! Form to create new shelf }}
+  <form id="add-shelf-form">
+    <label for="shelf-name">Shelf Name:</label>
+    <input type="text" id="shelf-name" name="name" required />
+    <button type="submit">Add Shelf</button>
+  </form>
   {{#each shelves}}
-  <div class="my-shelves">
-    <p>{{this.name}}</p>
-  </div>
+    <div class="my-shelves">
+      <p>{{this.name}}</p>
+      <button class="delete-shelf-button" data-shelf-id="{{this.id}}">Delete
+        Shelf</button>
+
+    </div>
   {{/each}}
 
   <h2>Your Saved Books</h2>
@@ -25,6 +34,11 @@
       <p>First published in {{this.first_publish_year}}</p>
       <p>Average Rating: {{this.ratings_average}}</p>
       <p>Author: {{this.author_name}}</p>
+      {{! ! Button to delete a Book }}
+      <button
+        class="delete-book-button"
+        data-book-id="{{this.id}}"
+      >Delete</button>
     </div>
   {{/each}}
 
@@ -32,3 +46,7 @@
   <p class="login-prompt">You must log in to view your bookshelf.
     <a href="/login">Login</a></p>
 {{/if}}
+
+<script src="/js/bookshelfFunctions/deleteShelf.js"></script>
+<script src="/js/bookshelfFunctions/addShelf.js"></script>
+<script src="/js/bookshelfFunctions/deleteBook.js"></script>
