user can change shelf name

--- a/views/bookshelf.handlebars
+++ b/views/bookshelf.handlebars
@@ -19,6 +19,7 @@
       <p>{{this.name}}</p>
       <button class="delete-shelf-button" data-shelf-id="{{this.id}}">Delete
         Shelf</button>
+      <button class="edit-shelf-button" data-shelf-id="{{this.id}}">Edit Shelf</button>
 
     </div>
   {{/each}}
@@ -49,4 +50,5 @@
 
 <script src="/js/bookshelfFunctions/deleteShelf.js"></script>
 <script src="/js/bookshelfFunctions/addShelf.js"></script>
+<script src="/js/bookshelfFunctions/editShelf.js"></script>
 <script src="/js/bookshelfFunctions/deleteBook.js"></script>
