added tailwind framework

--- a/views/findbooks.handlebars
+++ b/views/findbooks.handlebars
@@ -1,5 +1,5 @@
-<div>
-    <h2>Book Search</h2>
+<div id="formDiv">
+    <h2 class="font-bold underline">Book Search</h2>
     <form id="searchForm">
         <p>Search By:</p>
         <input type="radio" id="title" name="searchBy" value="title" checked="checked">
