--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* created root items for future styling consistency*/
 :root {
     --primary: #3d5852;
@@ -75,4 +79,8 @@ a {
 a:hover {
     text-decoration: none;
     
+}
+
+#formDiv {
+    padding: 100px;
 }
