--- a/public/css/tw.css
+++ b/public/css/tw.css
@@ -239,7 +239,7 @@ button,
 [type='submit'] {
   -webkit-appearance: button;
   /* 1 */
-  background-color: transparent;
+  background-color: lightseagreen;
   /* 2 */
   background-image: none;
   /* 2 */
