--- a/views/findbooks.handlebars
+++ b/views/findbooks.handlebars
@@ -8,7 +8,7 @@
         <label for="title">Author</label><br>
         <input type="text" id="input">
 
-        <input type="submit" id="submit" value="Search">
+        <input class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" type="submit" id="submit" value="Search">
     </form>
 
     <div id="results"></div>
