--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,3 +92,16 @@ a:hover {
     padding: 5px;
     /* Add padding to the anchor on hover */
 }
+
+/*login/register forms */
+.login-form {
+    padding: 20px;
+    margin: 5px;
+    border: 1px solid lightgray;
+}
+
+#register-form {
+    padding: 20px;
+    margin: 5px;
+    border: 1px solid lightgray;
+}
