--- a/public/css/tw.css
+++ b/public/css/tw.css
@@ -743,6 +743,20 @@ a:hover {
   /* Add padding to the anchor on hover */
 }
 
+/*login/register forms */
+
+.login-form {
+  padding: 20px;
+  margin: 5px;
+  border: 1px solid lightgray;
+}
+
+#register-form {
+  padding: 20px;
+  margin: 5px;
+  border: 1px solid lightgray;
+}
+
 .hover\:bg-blue-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
