--- a/views/loginpage.handlebars
+++ b/views/loginpage.handlebars
@@ -2,14 +2,14 @@
 <h3>Login:</h3>
 <form class="login-form">
   <label for="username">Username:</label>
-  <input type="text" id="usernameInput" name="username" required />
+  <input type="text" id="usernameInput" name="username" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5" required />
 
   <label for="password">Password:</label>
-  <input type="password" id="passwordInput" name="password" required />
+  <input type="password" id="passwordInput" name="password" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5" required />
 
   <br />
 
-  <button type="submit">Login</button>
+  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 w-1/3">Login</button>
 </form>
 
 <h3>User Registration:</h3>
@@ -17,27 +17,27 @@
 <form id="register-form">
 
   <label for="email">Email:</label>
-  <input type="email" id="registerEmail" name="email" required />
+  <input type="email" id="registerEmail" name="email" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5" required />
 
   <br />
 
   <label for="username">Username:</label>
-  <input type="text" id="registerUsername" name="username" required />
+  <input type="text" id="registerUsername" name="username" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5" required />
 
   <br />
 
   <label for="password">Password:</label>
-  <input type="password" id="registerPassword" name="password" required />
+  <input type="password" id="registerPassword" name="password" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5" required />
 
   <br />
 
   <!-- Confirm Password -->
   <label for="confirmPassword">Confirm Password:</label>
-  <input type="password" id="confirmPassword" name="confirmPassword" required />
+  <input type="password" id="confirmPassword" name="confirmPassword" class="border border-gray-300 text-gray-900 text-sm rounded-lg focus:border-blue-500 block w-full p-2.5" required />
 
   <br />
 
-  <button type="submit">Register</button>
+  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 w-1/3">Register</button>
 </form>
 {{#if error}}
   <p class="error">{{error}}</p>
