last functionality. User can DELETE their account

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -18,4 +18,10 @@
   <button type="submit">Change Password</button>
 </form>
 
+<!-- Button to delete the account -->
+<div class="alignCenter">
+  <button id="deleteAccountButton" data-user-id="{{user.id}}">Delete Account</button>
+</div>
+
 <script src="/js/accountFunctions/changePassword.js"></script>
+<script src="/js/accountFunctions/deleteAccount.js"></script>
