--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,25 +1,31 @@
 {{log user}}
 
-<h2>Manage {{user.username}}'s Account</h2>
+<div class="my-3">
+<h2 class="underline font-bold text-lg">Manage {{user.username}}'s Account</h2>
 
 <h3>Member ID: {{user.id}}</h3>
 <h3>Member Since: {{format_time user.createdAt}}</h3>
 <h3>Email Registered: {{user.email}}</h3>
+</div>
 
 <!-- Form for changing password -->
-<h3 class="underline">Change Password</h3>
-<form id="changePasswordForm">
+<h3 class="underline font-bold text-lg">Change Password</h3>
+<form class="my-4" id="changePasswordForm">
   <label for="currentPassword">Current Password:</label>
-  <input type="password" id="currentPassword" name="currentPassword" required />
-
+  <input class="border border-black" type="password" id="currentPassword" name="currentPassword" required />
+    <br>
   <label for="newPassword">New Password:</label>
-  <input type="password" id="newPassword" name="newPassword" required />
+  <input class="border border-black" type="password" id="newPassword" name="newPassword" required />
 
-  <button type="submit">Change Password</button>
+  <div class="w-50 text-center my-2 py-2 bg-green-400 hover:bg-green-500 text-white rounded">
+    <button type="submit">Change Password</button>
+  </div>
 </form>
 
 <!-- Button to delete the account -->
-<div class="alignCenter">
+<div
+  class="w-50 text-center py-2 my-4 bg-red-500 text-white rounded hover:bg-red-600 hover:text-gray-100"
+>
   <button id="deleteAccountButton" data-user-id="{{user.id}}">Delete Account</button>
 </div>
 
