--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,14 @@ body {
     border: 1px solid lightgray;
 }
 
+/*homepage and cards*/
+.seed-card {
+    padding: 20px;
+    margin: 5px;
+    border: 1px solid lightgray;
+}
+
+
 /* Increase padding for header */
 header {
     display: flex;
