--- a/public/css/tw.css
+++ b/public/css/tw.css
@@ -693,6 +693,14 @@ body {
   border: 1px solid lightgray;
 }
 
+/*homepage and cards*/
+
+.seed-card {
+  padding: 20px;
+  margin: 5px;
+  border: 1px solid lightgray;
+}
+
 /* Increase padding for header */
 
 header {
