--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,11 @@ body {
     /* Add padding to the body */
 }
 
+#navList {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 /* Increase padding for bookshelf-container */
 .bookshelf-container {
     display: flex;
